Fixed the tagging function using the django-tagging library.

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -2,32 +2,47 @@
 {% load static %}
 
 {% block header %}
-  <!-- Page Header -->
-  <header class="masthead" style="background-image: url('{% static 'img/post-bg.jpg' %}')">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="post-heading">
-            <h1>{{ post.subject }}</h1>
-            <span class="meta">Posted by
+    <!-- Page Header -->
+    <header class="masthead" style="background-image: url('{% static 'img/post-bg.jpg' %}')">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="post-heading">
+                        <h1>{{ post.subject }}</h1>
+                        <span class="meta">Posted by
               {{ post.user }} on {{ post.created|date:"M" }} {{ post.created.day }}, {{ post.created.year }}</span>
-          </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </header>
+    </header>
 {% endblock %}
 {% block content %}
-  <!-- Post Content -->
-  <article>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-            {{ post.content | safe }}
+    <!-- Post Content -->
+    <article>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    {{ post.content | safe }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <b>Tags: </b>
+                    {% load tagging_tags %}
+                    {% tags_for_object post as tags %}
+                    {% for tag in tags %}
+                        <a href="{% url 'posts:tagged_object_list' tag.name %}">{{ tag.name }}</a>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </article>
-  <hr>
+    </article>
+    <hr>
 {% endblock %}
