Added search function. Removed typo.

--- a/templates/base.html
+++ b/templates/base.html
@@ -55,8 +55,18 @@
 {% block header %}
 {% endblock %}
 
-{% block content %}
-{% endblock %}
+<div class="container">
+    {% block content %}
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <form class="form-inline my-2 my-lg-0 justify-content-end" method="get">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" name="q" value="{{ q }}">
+                    <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit" style="border: none;">Search</button>
+                </form>
+            </div>
+        </div>
+    {% endblock %}
+</div>
 
 <!-- Footer -->
 <footer>
