Added tag cloud link in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,9 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'posts:tag_cloud' %}">Tag</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'posts:home' %}">Home</a>
                 </li>
                 <li class="nav-item">
